--- a/res/templates/posts.html
+++ b/res/templates/posts.html
@@ -11,15 +11,15 @@
         </div>
         {% endif %}
         <div class="bk-post-text bk-content">{{post.text_raw}}</div>
-        {% if post.user is object and post.user.id is defined %}
-        <a href="{{'https://weibo.com/'~post.user.id~'/'~post.mblogid}}" class="bk-link bk-content">[原贴链接]</a>
-        {% endif %}
-        {% if pics is defined %}
+        {% if post.pics is defined %}
         <div class="bk-post-media bk-content">
-        {% for pic in pics %}
+        {% for pic in post.pics %}
         <img class="bk-pic" alt="[图片]" src="{{pic}}">
         {% endfor %}
         </div>
+        {% endif %}
+        {% if post.user is object and post.user.id is defined %}
+        <a href="{{'https://weibo.com/'~post.user.id~'/'~post.mblogid}}" class="bk-link bk-content">[原贴链接]</a>
         {% endif %}
     </div>
     {% if post.retweeted_status is defined and post.retweeted_status is object %}
@@ -35,9 +35,9 @@
         </div>
         {% endif %}
         <div class="bk-retweet-text bk-content">{{post.retweeted_status.text_raw}}​​​</div>
-        {% if retweet_pics is defined %}
+        {% if post.retweet_status.pics is defined %}
         <div class="bk-retweet-media bk-content">
-        {% for pic in retweet_pics %}
+        {% for pic in post.retweeted_status.pics %}
         <img class="bk-pic" alt="[图片]" src="{{pic}}">
         {% endfor %}
         </div>
