--- a/res/templates/page.html
+++ b/res/templates/page.html
@@ -1,116 +1,1 @@
-<html lang="zh-CN">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <style>
-        body {
-            background-color: #f1f2f5
-        }
-
-        .bk-post-wrapper {
-            border-radius: 4px;
-            background: #fff;
-            width: 700px;
-            margin: 8px auto;
-            padding: 10px 0
-        }
-
-        .bk-poster {
-            display: flex;
-            align-items: center;
-            vertical-align: middle;
-            height: 60px
-        }
-
-        .bk-poster-avatar,
-        .bk-retweeter-avatar {
-            height: 60px;
-            width: 60px;
-            border-radius: 50%;
-            margin: auto 8px
-        }
-
-        .bk-retweeter-avatar {
-            height: 40px;
-            width: 40px
-        }
-
-        .bk-post-text {
-            background: #fff
-        }
-
-        .bk-content {
-            margin: 8px 24px 8px 76px;
-            font-size: 15px;
-            line-height: 24px
-        }
-
-        .bk-retweeter {
-            display: flex;
-            align-items: center;
-            vertical-align: middle;
-            height: 40px;
-            margin: 8px 24px 8px 76px
-        }
-
-        .bk-retweet {
-            background: #f9f9f9;
-            padding: 2px 0
-        }
-
-        .bk-pic {
-            max-width: 600px;
-            max-height: 400px;
-            margin: auto
-        }
-
-        .bk-poster-name,
-        .bk-retweeter-name {
-            color: #000;
-            font-weight: 700;
-            text-decoration: none;
-            font-family: Arial, Helvetica, sans-serif
-        }
-
-        .bk-poster-name:hover,
-        .bk-retweeter-name:hover {
-            color: #eb7350
-        }
-
-        .bk-icon-link {
-            height: 20px;
-            filter: sepia(100%) saturate(3800%) contrast(75%);
-            vertical-align: middle;
-            margin-bottom: 4px
-        }
-
-        .bk-link,
-        .bk-user {
-            color: #eb7350;
-            text-decoration: none
-        }
-
-        .bk-link:hover,
-        .bk-user:hover {
-            text-decoration: underline
-        }
-
-        .bk-emoji {
-            height: 20px;
-            vertical-align: middle;
-            margin-bottom: 4px
-        }
-
-        .bk-create-detail {
-            font-size: 10px;
-            color: #939393
-        }
-    </style>
-    <title>微博备份</title>
-</head>
-
-<body>{{html}}</body>
-
-</html>
+<html lang="zh-CN"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><style>body{background-color:#f1f2f5}.bk-post-wrapper{border-radius:4px;background:#fff;width:700px;margin:8px auto;padding:10px 0}.bk-poster{display:flex;align-items:center;vertical-align:middle;height:60px}.bk-poster-avatar,.bk-retweeter-avatar{height:60px;width:60px;border-radius:50%;margin:auto 8px}.bk-retweeter-avatar{height:40px;width:40px}.bk-post-text{background:#fff}.bk-content{margin:8px 24px 8px 76px;font-size:15px;line-height:24px}.bk-retweeter{display:flex;align-items:center;vertical-align:middle;height:40px;margin:8px 24px 8px 76px}.bk-retweet{background:#f9f9f9;padding:2px 0}.bk-pic{max-width:600px;max-height:400px;margin:auto}.bk-poster-name,.bk-retweeter-name{color:#000;font-weight:700;text-decoration:none;font-family:Arial,Helvetica,sans-serif}.bk-poster-name:hover,.bk-retweeter-name:hover{color:#eb7350}.bk-icon-link{height:20px;filter:sepia(100%) saturate(3800%) contrast(75%);vertical-align:middle;margin-bottom:4px}.bk-link,.bk-user{color:#eb7350;text-decoration:none}.bk-link:hover,.bk-user:hover{text-decoration:underline}.bk-emoji{height:20px;vertical-align:middle;margin-bottom:4px}.bk-create-detail{font-size:10px;color:#939393}</style><title>微博备份</title></head><body>{{html}}</body></html>
