--- a/weiback/templates/post.html
+++ b/weiback/templates/post.html
@@ -1,38 +1,37 @@
 <div class="bk-post-wrapper">
     <div class="bk-post">
-        {% if post.user is object and post.user.id is defined %}
+        {% if user is object and user.id is defined %}
         <div class="bk-poster">
-            <img class="bk-poster-avatar" alt="头像" src="{{post.poster_avatar}}">
-            <a class="bk-poster-name"
-                href="{{'https://weibo.com' ~ post.user.profile_url}}">{{post.user.screen_name}}</a>
-            <p class="bk-create-detail">&nbsp&nbsp{{post.created_at}}{% if post.region_name is defined and
-                post.region_name is string %}&nbsp&nbsp{{post.region_name}}{% endif %}</p>
+            <img class="bk-poster-avatar" alt="头像" src="{{avatar_path}}">
+            <a class="bk-poster-name" href="{{'https://weibo.com/u/' ~ user.id}}">{{user.screen_name}}</a>
+            <p class="bk-create-detail">&nbsp&nbsp{{created_at}}{% if region_name is defined and
+                region_name is string %}&nbsp&nbsp{{region_name}}{% endif %}</p>
         </div>
         {% endif %}
-        <div class="bk-post-text bk-content">{{post.text_raw}}</div>
-        {% if post.pics is defined %}
-        <div class="bk-post-media bk-content">{% for pic in post.pics %}<img class="bk-pic" alt="[图片]" src="{{pic}}">{%
+        <div class="bk-post-text bk-content">{{text}}</div>
+        {% if pic_paths is defined %}
+        <div class="bk-post-media bk-content">{% for pic in pic_paths %}<img class="bk-pic" alt="[图片]" src="{{pic}}">{%
             endfor %}</div>
         {% endif %}
-        {% if post.user is object and post.user.id is defined %}
-        <a href="{{'https://weibo.com/'~post.user.id~'/'~post.mblogid}}" class="bk-link bk-content">[原贴链接]</a>
+        {% if user is object and user.id is defined %}
+        <a href="{{'https://weibo.com/'~user.id~'/'~mblogid}}" class="bk-link bk-content">[原贴链接]</a>
         {% endif %}
     </div>
-    {% if post.retweeted_status is defined and post.retweeted_status is object %}
+    {% if retweeted_status is defined and retweeted_status is object %}
     <div class="bk-retweet">
-        {% if post.retweeted_status.user is object and post.retweeted_status.user.id is defined %}
-        <div class="bk-retweeter"><img class="bk-retweeter-avatar" alt="头像"
-                src="{{post.retweeted_status.poster_avatar}}"><a class="bk-retweeter-name"
-                href="{{'https://weibo.com' ~ post.retweeted_status.user.profile_url}}">{{post.retweeted_status.user.screen_name}}</a>
-            <p class="bk-create-detail">&nbsp&nbsp{{post.retweeted_status.created_at}}{% if
-                post.retweeted_status.region_name is defined and post.retweeted_status.region_name is string
-                %}&nbsp&nbsp{{post.retweeted_status.region_name}}{% endif %}</p>
-        </div>{% endif %}<div class="bk-retweet-text bk-content">{{post.retweeted_status.text_raw}}​​​</div>{% if
-        post.retweet_status.pics is defined %}<div class="bk-retweet-media bk-content">{% for pic in
-            post.retweeted_status.pics %}<img class="bk-pic" alt="[图片]" src="{{pic}}">{% endfor %}</div>
+        {% if retweeted_status.user is object and retweeted_status.user.id is defined %}
+        <div class="bk-retweeter"><img class="bk-retweeter-avatar" alt="头像" src="{{retweeted_status.avatar_path}}"><a
+                class="bk-retweeter-name"
+                href="{{'https://weibo.com/u/' ~ retweeted_status.user.id}}">{{retweeted_status.user.screen_name}}</a>
+            <p class="bk-create-detail">&nbsp&nbsp{{retweeted_status.created_at}}{% if
+                retweeted_status.region_name is defined and retweeted_status.region_name is string
+                %}&nbsp&nbsp{{retweeted_status.region_name}}{% endif %}</p>
+        </div>{% endif %}<div class="bk-retweet-text bk-content">{{retweeted_status.text}}​​​</div>{% if
+        retweet_status.pic_paths is defined %}<div class="bk-retweet-media bk-content">{% for pic in
+            retweeted_status.pic_paths %}<img class="bk-pic" alt="[图片]" src="{{pic}}">{% endfor %}</div>
         {% endif %}
-        {% if post.retweeted_status.user is object and post.retweeted_status.user.id is defined %}<a
-            href="{{'https://weibo.com/'~post.retweeted_status.user.id~'/'~post.retweeted_status.mblogid}}"
+        {% if retweeted_status.user is object and retweeted_status.user.id is defined %}<a
+            href="{{'https://weibo.com/'~retweeted_status.user.id~'/'~retweeted_status.mblogid}}"
             class="bk-link bk-content">[原贴链接]</a>{% endif %}
     </div>
     {% endif %}
